# Computer-Vision-3D-Applications

./: .gitignore  README.md
.github/: CODEOWNERS
camera_calibration_3d/: CMakeLists.txt  README.md  intrinsics.yml  main.cpp
cbg_process/: CHANGELOG.TXT  CMakeLists.txt  REPORT.md  cbg_process.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
color_balance/: CHANGELOG.TXT  CMakeLists.txt  REPORT.md  color_balance.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
edge_detector/: CHANGELOG.TXT  CMakeLists.txt  REPORT.md  common_code.cpp  common_code.hpp  edge_detector.cpp  test_common_code.cpp
introduction_to_opencv/: CHANGELOG.TXT  CMakeLists.txt  README.md  REPORT.md  common_code.cpp  common_code.hpp  comp_stats.cpp  show_extremes.cpp  show_img.cpp  show_video.cpp  test_common_code.cpp
stereo_calibrate/: CMakeLists.txt  README.md  main.cpp
stereo_check_undistorted/: CMakeLists.txt  README.md  main.cpp
stereo_disparity/: CMakeLists.txt  README.md  main.cpp
stereo_sparse/: CMakeLists.txt  README.md  main.cpp
usm_enhance/: CHANGELOG.TXT  REPORT.md  common_code.cpp  common_code.hpp  test_common_code.cpp  usm_enhance.cpp
